laborations/lab1/testsuite/good/incr-decr.cc
int main() {
  (y++)++; --(--y);
  ++++y++++; ----y++++; ++++y----;
}
