laborations/lab1/testsuite/bad/bad132.cc
int main() {
	const int + 1;
}
